# CBO-Stiefel

./: .gitignore  2.1 Ito's Formula (Numeric Validation).md  2.2 Calculate Generator Action (Theory Corrected).md  2.2 Calculate Generator Action (Theory).md  2.5 Formulate Bounding Lemmas.md  3.1 Prove Lemma 1 (Normal Component Bound).py  README.md  stiefel_utils.py
1. Failure of Euclidean Proof Strategy/: 2.1 Ito's Formula (Theory).md  2.1 Ito's Formula.py  2.2 Calculate Generator Action (Numeric Validation).md  2.2 Calculate Generator Action.py  2.3 Analyze Drift Contribution.md  2.4 Analyze Diffusion (QV) Contribution.md  3.1 Prove Lemma 1 (Normal Component Bound).md  3.2 Prove Lemma 2 (Quantitative Laplace Principle).md  3.2 Prove Lemma 2 (Quantitative Laplace Principle).py  4.1 Lemma 3 - Derive Generator Bound.md  4.1 Research Result.md
2. Improving the SDE/: Ackley Experiment - Cormac's 1st SDE.py  Ackley Experiment - Cormac's 2nd SDE.py  Ackley Experiment - Kim.py  Cormac's SDE.md  Counter Example (Old).py  Counter Example.md  Counter Example.py
3. Proving Global Convergence of Cormac's 1st SDE/1. Establish Well-Posedness of the SDE/: 1.1 Prove Lipschitz Continuity of Objective Function.md  1.2 Prove Lipschitz Continuity of Consensus Point.md  1.3 Prove Lipschitz Continuity of Projection Operator.md  1.4 Establish Local Lipschitz Continuity of SDE Coefficients.md  1.5 Verify Itô Correction Term.md  1.6 Prove Existence of Unique Local Solution.md  1.7 Prove Global Existence (Non-Explosion).md  Combined.md  Tasks.md
cbo-stiefel/: CMakeLists.txt  CMakeLists.txt.old  README.md  build_cbo_module.sh  cbo-stiefel.rb.template  check.sh  consensus_point_on_lie_groups.md  experiment_runner.py  full_ackley_suite.py  full_qap_suite.py  full_wopp_suite.py  visualisation.py  wopp_experiment.py
cbo-stiefel/demo/: ROTATIONAL.md  experiment_runner.py  full_ackley_suite.py  full_droppca_suite.py  full_gep_suite.py  full_opp_suite.py  full_qap_suite.py  full_rotation_averaging_suite.py  full_wopp_suite.py  get_financial_data.py  render.py  run_asset_experiment.py  visualisation.py
cbo-stiefel/demo/risk_analysis/: analysis.md  asset_returns.csv  asset_returns2.csv  learn_gamma_l_curve.py  learn_rho_l_curve.py  run_standard_spca.py  theorem.md
cbo-stiefel/demo/saves/ackley/: cbo_results_CormacsCBOSolver_V3_5.pkl  cbo_results_KimCBOSolver_V1_3.pkl
cbo-stiefel/demo/saves/asset_returns_experiment/: best_minimizer_X.npy  best_minimizer_X_1.npy  best_minimizer_X_2.npy  best_minimizer_X_3.npy  best_minimizer_X_4.npy  best_minimizer_X_5.npy
cbo-stiefel/kernel/bindings/: cbo_module.cpp
cbo-stiefel/kernel/objectives/: ackley_objective.h  base_objective.h  qap_objective.h  wopp_objective.h
cbo-stiefel/kernel/solvers/: base_solver.cpp  base_solver.h  cormac_solver.cpp  cormac_solver.h  kim_solver.cpp  kim_solver.h
cbo-stiefel/objectives/: ackley.py  wopp.py
cbo-stiefel/optimizer/: accelerated_cormac_solver.py  accelerated_kim_solver.py  base_solver.py  cormac_solver.py  kim_solver.py
cbo-stiefel/releases/: cbo-stiefel.rb
cbo-stiefel/saves/ackley/: cbo_results_CormacsCBOSolver_V1_3.pkl  cbo_results_CormacsCBOSolver_V3_5.pkl  cbo_results_KimCBOSolver_V3_5.pkl
cbo-stiefel/src/bindings/: cbo_module.cpp
cbo-stiefel/src/consensus_points/: base_consensus_point.h  extrinsic_consensus_point.cpp  extrinsic_consensus_point.h  hybrid_intrinsic_consensus_point.cpp  hybrid_intrinsic_consensus_point.h  stochastic_intrinsic_consensus_point.cpp  stochastic_intrinsic_consensus_point.h
cbo-stiefel/src/objectives/: ackley_objective.h  base_objective.h  dro_pca_objective.h  qap_objective.h  wopp_objective.h
cbo-stiefel/src/objectives/rotational/: gep_objective.h  opp_objective.h  rotation_averaging_objective.h
cbo-stiefel/src/solvers/: base_solver.cpp  base_solver.h  cbo_result.h  cormac_solver.cpp  cormac_solver.h  kim_solver.cpp  kim_solver.h
